--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   amazin-object-storage-node-1: &object-storage-node
     image: minio/minio
     command: server --console-address ":9001" /tmp/data
-    ports: [ "9001:9001" ] # You can open localhost:9001 in your browser to debug what objects are on this node.
+    ports: ["9001:9001"] # You can open localhost:9001 in your browser to debug what objects are on this node.
     networks:
       amazin-object-storage:
         # Don't copy those addresses in your application. Use the local docker socket to get them.
@@ -16,7 +16,7 @@ services:
 
   amazin-object-storage-node-2:
     <<: *object-storage-node
-    ports: [ "9002:9001" ] # You can open localhost:9002 in your browser to debug what objects are on this node.
+    ports: ["9002:9001"] # You can open localhost:9002 in your browser to debug what objects are on this node.
     networks:
       amazin-object-storage:
         ipv4_address: 169.253.0.3
@@ -26,7 +26,7 @@ services:
 
   amazin-object-storage-node-3:
     <<: *object-storage-node
-    ports: [ "9003:9001" ] # You can open localhost:9003 in your browser to debug what objects are on this node.
+    ports: ["9003:9001"] # You can open localhost:9003 in your browser to debug what objects are on this node.
     networks:
       amazin-object-storage:
         ipv4_address: 169.253.0.4
@@ -38,12 +38,16 @@ services:
     # Feel free to change configuration options of this container, like the image, or the Dockerfile itself.
     build: .
     command: sleep 36000 # Changeme: Put in just so the container stays on after being started.
-    ports: [ "3000:3000" ]
+    ports: ["3000:3000"]
+    depends_on:
+      - amazin-object-storage-node-1
+      - amazin-object-storage-node-2
+      - amazin-object-storage-node-3
     networks:
-      amazin-object-storage :
+      amazin-object-storage:
         ipv4_address: 169.253.0.5
     volumes:
-    - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock
 
 networks:
   amazin-object-storage:
